# lintai

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  env.sample  lintaiignore.sample  pyproject.toml  requirements-dev.txt
.github/workflows/: publish.yml
docs/: frontend-deployment.md
examples/: README.md  badCode.py  badEval.js  bare_except.py  chatbot.py  dangerous_tool.py  hello_world_ai.py  insecureRandom.js  langchain_semi_strutured_rag.py  main.py  pii_leak.py  secrets.py  sql_injection.py  unclosedPromise.js  unusedVars.js  xssVulnerable.js
examples/agents/: crew.py  enterprise.py
examples/autogen/: hello_world.py  web_surfer_agent.py
lintai/: cli.py  cli_support.py
lintai/components/: autogen.py  crewai.py  dspy.py  langchain.py
lintai/core/: finding.py  loader.py  report.py
lintai/detectors/: __init__.py  base.py  insecure_eval.py  llm01_prompt_injection.py  llm02_insecure_output.py  llm02_secret_in_prompt.py  llm06_execessive_agency.py  llm_code_audit.py  pii_eval.py
lintai/dsl/: loader.py
lintai/engine/: ai_call_analysis.py  ai_tags.py  analysis.py  ast_utils.py  classification.py  component_types.py  frameworks.py  inventory_builder.py  python_ast_unit.py  visitor.py
lintai/llm/: __init__.py  anthropic.py  azure.py  base.py  cohere.py  dummy.py  gemini.py  openai.py
lintai/models/: inventory.py
lintai/ui/: server.py
scripts/: build-frontend.py
tests/: test_api.py  test_cli.py  test_core.py  test_dsl.py  test_env_loader.py  test_llm_detector.py  test_llm_provider.py
(+71 files in other folders)
