[project]
name = "lintai"
version = "0.0.1"
description = "Shift‑left LLM security scanner"
authors = [{ name = "Harsh Parandekar", email = "harsh.parandekar@paskl.ai" }]
requires-python = ">=3.9"
dependencies = ["typer>=0.12", "importlib-metadata; python_version<'3.10'"]

[project.scripts]
lintai = "lintai.cli:app"
